Remove local datapath

--- a/nb_differentiated_adv.ipynb
+++ b/nb_differentiated_adv.ipynb
@@ -91,7 +91,7 @@
     "    ratio = 0.8\n",
     "    DL = True\n",
     "    diff_LAMBDA = 10**(3.7)\n",
-    "    data_path = \"D:\\\\Project\\\\User_gender_removal\\\\data\\\\deepmoji\\\\split2\\\\\"\n",
+    "    data_path = #Your data path\n",
     "\n",
     "args = Args()"
    ]
