--- a/nb_INLP.ipynb
+++ b/nb_INLP.ipynb
@@ -93,7 +93,7 @@
     "    adv_units = 256\n",
     "    ratio = 0.8\n",
     "    \n",
-    "data_path = \"D:\\\\Project\\\\User_gender_removal\\\\data\\\\deepmoji\\\\split2\\\\\"\n",
+    "data_path = #Your data path\n",
     "args = Args()\n",
     "args.device = device"
    ]
