--- a/nb_adv_ensemble.ipynb
+++ b/nb_adv_ensemble.ipynb
@@ -91,7 +91,7 @@
     "    ratio = 0.8\n",
     "    DL = False\n",
     "    diff_LAMBDA = 0\n",
-    "    data_path = \"D:\\\\Project\\\\User_gender_removal\\\\data\\\\deepmoji\\\\split2\\\\\"\n",
+    "    data_path = #Your data path\n",
     "\n",
     "args = Args()"
    ]
