--- a/nb_deepmoji.ipynb
+++ b/nb_deepmoji.ipynb
@@ -80,14 +80,11 @@
    "source": [
     "class Args:\n",
     "    use_fp16 = False\n",
-    "    gender_balanced = False\n",
     "    cuda = \"cuda\"\n",
     "    hidden_size = 300\n",
     "    emb_size = 2304\n",
     "    num_classes = 2\n",
     "    n_hidden = 2\n",
-    "    original_FEDA = True\n",
-    "    Augmentation = False\n",
     "    adv = False\n",
     "    adv_level = -1\n",
     "    lr = 3e-5\n",
@@ -96,9 +93,7 @@
     "    ratio = 0.8\n",
     "    dropout = 0.5\n",
     "\n",
-    "    \n",
-    "# data_path = \"/home/xudongh1/User_gender_removal/data/SemEval2017/\"\n",
-    "data_path = \"D:\\\\Project\\\\User_gender_removal\\\\data\\\\deepmoji\\\\split2\\\\\"\n",
+    "data_path = #Your data path\n",
     "args = Args()\n",
     "args.device = device"
    ]
